# sysly

./: .gitignore  Cargo.toml  LICENSE  METADATA.md  README.md  build.rs
.github/workflows/: build-and-release.yml
src/: build_info.rs  helpers.rs  main.rs  process.rs  ui.rs
