[package]
name = "sysly"
version = "1.1.0"
edition = "2021"
authors = ["Thinh Nguyen <hungtrungthinh@gmail.com>"]
description = "A macOS-focused system monitoring dashboard experiment, conceived on Jul 1, 2019"
license = "Apache-2.0"
repository = "https://github.com/thinhnguyen/sysly"
keywords = ["system", "monitor", "dashboard", "htop", "terminal", "tui", "macos", "experiment"]
categories = ["command-line-utilities", "system"]
readme = "README.md"
build = "build.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
sysinfo = "0.30"
once_cell = "1.19"
num-format = "0.4"
users = "0.11.0"
psutil = "3.2"
libc = "0.2"
chrono = "0.4"

[build-dependencies]
chrono = "0.4"
